natgateway.tf
# Allocate Elastic IP Address (EIP 1)
# terraform aws allocate elastic ip
resource "aws_eip" "main_eip-for-nat-gateway-1" {
  vpc    = true

  tags   = {
    Name = "EIP 1"
  }
}


# Create Nat Gateway 1 in Public Subnet 1
# terraform create aws nat gateway
resource "aws_nat_gateway" "main_nat-gateway-1" {
  allocation_id = aws_eip.main_eip-for-nat-gateway-1.id
  subnet_id     = aws_subnet.main_publicsubnet1.id

  tags   = {
    Name = "Nat Gateway Public Subnet 1"
  }
}

# Create Private Route Table 1 and Add Route Through Nat Gateway 1
# terraform aws create route table
resource "aws_route_table" "main_private-route-table-1" {
  vpc_id            = aws_vpc.main_vpc.id

  route {
    cidr_block      = "0.0.0.0/0"
    nat_gateway_id  = aws_nat_gateway.main_nat-gateway-1.id
  }

  tags   = {
    Name = "Private Route Table 1"
  }
}

# Associate Private Subnet 1 with "Private Route Table 1"
# terraform aws associate subnet with route table
resource "aws_route_table_association" "main_privatesubnet1-route-table-association" {
  subnet_id         = aws_subnet.main_privatesubnet1.id
  route_table_id    = aws_route_table.main_private-route-table-1.id
}


# Allocate Elastic IP Address (EIP 2)
# terraform aws allocate elastic ip
resource "aws_eip" "main_eip-for-nat-gateway-2" {
  vpc    = true

  tags   = {
    Name = "EIP 2"
  }
}
# Create Nat Gateway 2 in Public Subnet 2
# terraform create aws nat gateway
resource "aws_nat_gateway" "main_nat-gateway-2" {
  allocation_id = aws_eip.main_eip-for-nat-gateway-2.id
  subnet_id     = aws_subnet.main_publicsubnet2.id

  tags   = {
    Name = "Nat Gateway Public Subnet 2"
  }
}
# Create Private Route Table 2 and Add Route Through Nat Gateway 2
# terraform aws create route table
resource "aws_route_table" "main_private-route-table-2" {
  vpc_id            = aws_vpc.main_vpc.id

  route {
    cidr_block      = "0.0.0.0/0"
    nat_gateway_id  = aws_nat_gateway.main_nat-gateway-2.id
  }

  tags   = {
    Name = "Private Route Table 2"
  }
}

# Associate Private Subnet 2 with "Private Route Table 2"
# terraform aws associate subnet with route table
resource "aws_route_table_association" "main_privatesubnet2-route-table-association" {
  subnet_id         = aws_subnet.main_privatesubnet2.id
  route_table_id    = aws_route_table.main_private-route-table-1.id
}
